tests/baselines/reference/generatorES6_6.errors.txt
tests/cases/compiler/generatorES6_6.ts(2,3): error TS9001: Generators are not currently supported.
tests/cases/compiler/generatorES6_6.ts(3,13): error TS9000: 'yield' expressions are not currently supported.


==== tests/cases/compiler/generatorES6_6.ts (2 errors) ====
    class C {
      *[Symbol.iterator]() {
      ~
!!! error TS9001: Generators are not currently supported.
        let a = yield 1;
                ~~~~~
!!! error TS9000: 'yield' expressions are not currently supported.
      }
    }